--- a/.github/workflows/pogoda.yml
+++ b/.github/workflows/pogoda.yml
@@ -6,9 +6,10 @@ on:
     - cron: '0 5 * * *'   # 07:00 PL
     - cron: '0 8 * * *'   # 10:00 PL
     - cron: '0 11 * * *'  # 13:00 PL
+    - cron: '0 14 * * *'  # 16:00 PL
     - cron: '0 17 * * *'  # 19:00 PL
     - cron: '0 19 * * *'  # 21:00 PL
-  # Ręczne uruchomienie z Actions
+  # Ręczne uruchomienie
   workflow_dispatch:
 
 jobs:
